--- a/requirements.txt
+++ b/requirements.txt
@@ -97,10 +97,10 @@ langchain-openai==0.3.19 ; python_version >= "3.10" and python_version < "3.13"
 langchain-text-splitters==0.3.8 ; python_version >= "3.10" and python_version < "3.13"
 langchain-together==0.3.0 ; python_version >= "3.10" and python_version < "3.13"
 langchain==0.3.25 ; python_version >= "3.10" and python_version < "3.13"
-langgraph-checkpoint==2.0.26 ; python_version >= "3.10" and python_version < "3.13"
-langgraph-prebuilt==0.2.2 ; python_version >= "3.10" and python_version < "3.13"
-langgraph-sdk==0.1.70 ; python_version >= "3.10" and python_version < "3.13"
-langgraph==0.4.8 ; python_version >= "3.10" and python_version < "3.13"
+langgraph-checkpoint==2.0.26 ; 
+langgraph-prebuilt==0.2.2 ; 
+langgraph-sdk==0.1.70 ;
+langgraph==0.4.8 ;
 langsmith==0.3.45 ; python_version >= "3.10" and python_version < "3.13"
 load-dotenv==0.1.0 ; python_version >= "3.10" and python_version < "3.13"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "3.13"
