--- a/requirements.txt
+++ b/requirements.txt
@@ -89,19 +89,19 @@ jupyterlab-server==2.27.3 ; python_version >= "3.10" and python_version < "3.13"
 jupyterlab-widgets==3.0.15 ; python_version >= "3.10" and python_version < "3.13"
 jupyterlab==4.4.3 ; python_version >= "3.10" and python_version < "3.13"
 kubernetes==32.0.1 ; python_version >= "3.10" and python_version < "3.13"
-langchain-chroma==0.2.4 ; python_version >= "3.10" and python_version < "3.13"
-langchain-community==0.3.24 ; python_version >= "3.10" and python_version < "3.13"
-langchain-core==0.3.64 ; python_version >= "3.10" and python_version < "3.13"
-langchain-huggingface==0.2.0 ; python_version >= "3.10" and python_version < "3.13"
-langchain-openai==0.3.19 ; python_version >= "3.10" and python_version < "3.13"
-langchain-text-splitters==0.3.8 ; python_version >= "3.10" and python_version < "3.13"
-langchain-together==0.3.0 ; python_version >= "3.10" and python_version < "3.13"
-langchain==0.3.25 ; python_version >= "3.10" and python_version < "3.13"
+langchain-chroma==0.2.4 ; 
+langchain-community==0.3.24 ; 
+langchain-core==0.3.64 ; 
+langchain-huggingface==0.2.0 ;
+langchain-openai==0.3.19 ; 
+langchain-text-splitters==0.3.8 ; 
+langchain-together==0.3.0 ; 
+langchain==0.3.25 ; 
 langgraph-checkpoint==2.0.26 ; 
 langgraph-prebuilt==0.2.2 ; 
 langgraph-sdk==0.1.70 ;
 langgraph==0.4.8 ;
-langsmith==0.3.45 ; python_version >= "3.10" and python_version < "3.13"
+langsmith==0.3.45 ; 
 load-dotenv==0.1.0 ; python_version >= "3.10" and python_version < "3.13"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "3.13"
 markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "3.13"
